1.1.3     _/__/21
    - Replaced all "_" in block definition tags with "-"
        - MAKE SURE TO CHANGE TAG NAMES IN YOUR DEFINITIONS OR THE CUSTOM BLOCKS WILL NOT WORK
        - For example,  "actual_block"  is now  "actual-block"
    - Renamed  WorldOfZombies\custom_block.yml  to  WorldOfZombies\custom-block.yml  (replaced "_" with "-")
    - Improved "item" custom block drop tag to include anything in the Material class
    - Removed the requirement of  "nbt-item"  or  "item"  in an individual drop section
    - Fixed a bug where custom block IDs wouldn't be properly removed after deleting their definition and reloading the plugin
    - Fixed a bug where the custom block  "demo-block"  would throw errors because of an incompatible  "sync-state"
    - Added functionality to calculate which custom blocks will drop items based on the "yield" of explosions
    - Added functionality to calculate custom block drops for blocks that break because from explosions
        - Added  "options.blast-resistant"  to not break in explosions


1.1.2     7/26/21
    - Overhauled command syntax - all commands are now:  /woz [command] [args]
        - For example,  /wozreload  is now  /woz reload  , and  /wozdatabase delete [world]  is now  /woz database delete [world]
        - Information about this plugin can be found by running  /woz info  or just  /woz
    - Commands that are run incorrectly or produce an error now send better formatted and more detailed error messages
    - Moved block un-logging from BlockBreakEvent and BlockChange packet handler into BlockDropItemEvent handler (no effect on functionality)
    - Overhauled custom block logging system - custom blocks are now defined in separate files and logged using their IDs
        - All data for custom block types is stored in files in the new  CustomItems  folder
            - File names in this folder can be arbitrary, and there can be any number of custom blocks in each file